--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title> Hydroelectric Energy at Home</title>
 		<!-- for CSS file-->
-		<link href="css/style.css" rel="stylesheet">
+		<link href="CSS/style.css" rel="stylesheet">
 		<!--HTML Responsive Web Design-->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!--Open Sans character-->
